Swagger
User update, room delete.
